tests/neg/semantic_strlen_bad_type.baa
// EXPECT: نوع المعامل 1 في 'طول_نص' غير متوافق

صحيح الرئيسية() {
    صحيح س = طول_نص(١).
    إرجع س.
}

